--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   padding-left: 30%;
   padding-top: 5%;
-  background-color: black; }
+  background-color: #16167b; }
 
 .container {
   width: 200px;
@@ -27,11 +27,11 @@ body {
   border: none;
   font-size: 30px;
   font-weight: bold;
-  color: rgba(0, 170, 255, 0.4); }
+  color: rgba(242, 200, 18, 0.4); }
 
 .a {
   display: block;
-  color: #0af;
+  color: #f2c812;
   /*opacity: 0.5;*/
   position: absolute;
   top: 0;
